deployments/alb_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: alb-ingress
   namespace: dev
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/security-groups: sg-0471f895eb8dd0222
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
     alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-2:854394523447:certificate/c849ca0f-4359-463e-82e4-7264475a33c1
     external-dns.alpha.kubernetes.io/hostname: alb.sadaiyer.com
spec:
  rules:
  - host: alb.sadaiyer.com
    http:
      paths:
      - backend:
          serviceName: service2
          servicePort: 80
